fixed resizing and overflow bugs in instructions

--- a/nonLevelPages/settings.css
+++ b/nonLevelPages/settings.css
@@ -66,16 +66,17 @@ h1 {
 }
 
 .xButton{
-    width:5%;
-    /* height:10%; */
+    width:5vw;
+    height:5vw;
     border-radius:100%;
     border: 1px solid black;
     text-align:center;
     padding-top:1.5%;
-    padding-bottom:1.5%;
+    /*padding-bottom:-3%; */
     float:right;
     margin:3%;
     font-family: 'Raleway-Local', sans-serif;
+    font-size:200%;
     font-weight: 400;
 }
 
@@ -129,13 +130,13 @@ h1 {
 }
 
 .colorSelection.nonLevel{
-    width:3vh;
-    height:3vh;
+    width:1.5vw;
+    height:1.5vw;
 }
 
 .colorSelection.level{
-    width:5.5vh;
-    height:5.5vh;
+    width:3.5vw;
+    height:3.5vw;
 }
 
 .setSelection:hover{
@@ -158,12 +159,14 @@ h1 {
 
 .selectX{
     color:white;
-    font-size:100;
+    font-size:100%;
     font-family: 'Raleway-Local', sans-serif;
     font-weight: 400;
     width:100%;
     height:100%;
     padding:0;
+    /* margin:0; */
+    margin-top: -50%;
 }
 
 
@@ -214,25 +217,23 @@ h1 {
 /* sets fonts for all children of instructions div*/
 #instructions{
     font-family: 'Raleway-Local', sans-serif;
-    font-weight: 400;
+    font-weight:50vw;
     z-index:5;
+    overflow: scroll;
+    overflow-X:hidden;
 }
 
 /* tells the player the general idea of the game */
 .mainInstructions{
  margin-left:3%;
  text-align:center;
+ font-size:1.35vw;
 }
 
-.sectionTitle{
- float:left;  
- margin:4.5%;
- margin-top:0;
- 
-}
 
 .instruction{
     clear:left;
+    color:#000000;
 }
 
 .header{
@@ -240,23 +241,39 @@ h1 {
     margin: 4%;
     float:left;
     margin-top:0;
+    color: #000000;
+    font-size: 1.25vw;
 }
+
+.spacer{
+    width:100%;
+    height: 1vh;
+}
+
+.sectionTitle{
+    float:left; 
+    margin:4.5%;
+    margin-top:0;
+    color:#b40063;
+    font-size:1.3vw;
+    
+   }
 
 .key{
     float:left;
     border: 2px solid darkgray;
     border-radius:10%;
-    padding:3%;
-    width:3vw;
-    height:3vw;
-    font-size:150%;
+    padding:7%;
+    width:5vw;
+    height:5vw;
+    font-size:2vw;
     text-align: center;
 }
 
 .notSquare{
     width: auto;
     height:fit-content;
-    font-size:150%;
+    font-size: 2vw;
 }
 
 
